--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "sass": "^1.44.0",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
