--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.3.0",
     "@googlemaps/react-wrapper": "^1.1.16",
     "@mui/icons-material": "^5.0.3",
-    "@mui/material": "^5.0.3",
+    "@mui/material": "^5.5.0",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
