--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
+    "baseUrl": "./src/",
     "typeRoots": [
       "./src/@types",
       "./node_modules/@types"
