--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "danito-sajt",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@googlemaps/react-wrapper": "^1.1.16",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.5.0",
@@ -19,6 +22,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.27.2",
     "google-map-react": "^2.1.10",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.9",
@@ -63,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^7.32.0",
