--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-gallery-carousel": "^0.2.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
@@ -46,7 +47,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:sass": "node-sass sass/main.scss css/styles.css -w"
+    "compile:sass": "node-sass sass/main.scss css/styles.css -w",
+    "sitemap": "babel-node src/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": [
@@ -70,6 +72,10 @@
     "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
