--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@babel/node": "^7.17.10",
+    "@babel/preset-env": "^7.18.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -29,6 +31,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-router-sitemap": "^1.2.0",
+    "react-router-sitemap-generator": "^0.0.8",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
@@ -48,7 +51,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile:sass": "node-sass sass/main.scss css/styles.css -w",
-    "sitemap": "babel-node src/sitemap-generator.js"
+    "sitemap": "babel-node src/siteNavigation/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.17.12",
     "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
