--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.27.2",
     "google-map-react": "^2.1.10",
     "lodash": "^4.17.21",
+    "npm-check": "^5.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.9",
@@ -32,7 +33,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-sitemap": "^1.2.0",
     "react-router-sitemap-generator": "^0.0.8",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.1.2",
