--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.27.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "google-map-react": "^2.1.10",
     "lodash": "^4.17.21",
     "npm-check": "^5.9.2",
